crates/courier-ftp/src/snapshots/courier_ftp__snapshot_tests__snap_explorer_tree_160x48.snap
---
source: crates/courier-ftp/src/snapshot_tests.rs
expression: "h.render(160, 48)"
---
 1 Local                                                                                                                                                        
┌ Local tree ──────────────────────────┐┏▶Local ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
│(not available yet)                   │┃                                                                                                                      ┃
│                                      │┃                                                                                                                      ┃
│                                      │┃                                                                                                                      ┃
│                                      │┃                                                                                                                      ┃
│                                      │┃                                                                                                                      ┃
│                                      │┃                                                                                                                      ┃
│                                      │┃                                                                                                                      ┃
│                                      │┃                                                                                                                      ┃
│                                      │┃                                                                                                                      ┃
│                                      │┃                                                                                                                      ┃
│                                      │┃                                                                                                                      ┃
│                                      │┃                                                                                                                      ┃
│                                      │┃                                                                                                                      ┃
│                                      │┃                                                                                                                      ┃
│                                      │┃                                                                                                                      ┃
│                                      │┃                                                                                                                      ┃
│                                      │┃                                                                                                                      ┃
│                                      │┃                                                                                                                      ┃
│                                      │┃                                                                                                                      ┃
│                                      │┃                                                                                                                      ┃
│                                      │┃                                                                                                                      ┃
└──────────────────────────────────────┘┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
┌ Remote tree ─────────────────────────┐┌ Remote ──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│(not available yet)                   ││                                                                                                                      │
│                                      ││                                                                                                                      │
│                                      ││                                                                                                                      │
│                                      ││                                                                                                                      │
│                                      ││                                                                                                                      │
│                                      ││                                                                                                                      │
│                                      ││                                                                                                                      │
│                                      ││                                                                                                                      │
│                                      ││                                                                                                                      │
│                                      ││                                                                                                                      │
│                                      ││                                             Not connected to any server                                              │
│                                      ││                                      Ctrl-s Site Manager · Ctrl-k Quickconnect                                       │
│                                      ││                                                                                                                      │
│                                      ││                                                                                                                      │
│                                      ││                                                                                                                      │
│                                      ││                                                                                                                      │
│                                      ││                                                                                                                      │
│                                      ││                                                                                                                      │
│                                      ││                                                                                                                      │
│                                      ││                                                                                                                      │
│                                      ││                                                                                                                      │
└──────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 – not connected │ Type: Auto │ ⇅ off                                                                  F1 help  F5 copy  F6 move  F7 mkdir  F8 delete  F10 quit
