crates/courier-ftp/src/snapshots/courier_ftp__snapshot_tests__snap_help_filelist_160x48.snap
---
source: crates/courier-ftp/src/snapshot_tests.rs
expression: "h.render(160, 48)"
---
┏▶Help: key bindings ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
┃General                                                                                                                                                       ┃
┃?, f1              │ Help               │ Help: bindings for the current mode                                                                                 ┃
┃ctrl-q, f10        │ Quit               │ Quit (confirm when transfers run)                                                                                   ┃
┃ctrl-z             │ Suspend            │ Suspend to the shell (Unix)                                                                                         ┃
┃g r                │ Redraw             │ Clear and redraw the screen                                                                                         ┃
┃ctrl-c             │ Cancel             │ Cancel the focused pane's running operation                                                                         ┃
┃f9                 │ Settings           │ Settings                                                                                                            ┃
┃                                                                                                                                                              ┃
┃Focus                                                                                                                                                         ┃
┃tab                │ FocusOtherSide     │ Switch between local and remote list                                                                                ┃
┃backtab            │ FocusNextRegion    │ Focus next region (log, trees, lists, queue)                                                                        ┃
┃g l                │ FocusLog           │ Focus message log                                                                                                   ┃
┃g q                │ FocusQueue         │ Focus queue                                                                                                         ┃
┃g f                │ FocusFiles         │ Focus the last file list                                                                                            ┃
┃ctrl-x 1           │ FocusRegion1       │ Focus the quickconnect bar (region 1)                                                                               ┃
┃ctrl-x 2           │ FocusRegion2       │ Focus the local tree (region 2)                                                                                     ┃
┃ctrl-x 3           │ FocusRegion3       │ Focus the local list (region 3)                                                                                     ┃
┃ctrl-x 4           │ FocusRegion4       │ Focus the remote tree (region 4)                                                                                    ┃
┃ctrl-x 5           │ FocusRegion5       │ Focus the remote list (region 5)                                                                                    ┃
┃ctrl-x 6           │ FocusRegion6       │ Focus the message log (region 6)                                                                                    ┃
┃ctrl-x 7           │ FocusRegion7       │ Focus the queue (region 7)                                                                                          ┃
┃ctrl-k             │ FocusQuickconnect  │ Focus the quickconnect bar (opens the dialog when the bar is hidden)                                                ┃
┃                                                                                                                                                              ┃
┃View                                                                                                                                                          ┃
┃ctrl-l             │ ToggleLog          │ Show/hide message log                                                                                               ┃
┃ctrl-x j           │ ToggleQueuePane    │ Show/hide queue                                                                                                     ┃
┃ctrl-e             │ ToggleTree         │ Show/hide directory trees                                                                                           ┃
┃ctrl-x q           │ ToggleQuickconnect │ Show/hide quickconnect bar                                                                                          ┃
┃g x                │ SwapPanes          │ Swap local and remote sides                                                                                         ┃
┃z 1                │ LayoutClassic      │ Layout: classic                                                                                                     ┃
┃z 2                │ LayoutExplorer     │ Layout: explorer                                                                                                    ┃
┃z 3                │ LayoutWidescreen   │ Layout: widescreen                                                                                                  ┃
┃.                  │ ToggleHidden       │ Show/hide hidden files                                                                                              ┃
┃C                  │ ColumnMenu         │ Columns                                                                                                             ┃
┃                                                                                                                                                              ┃
┃Tabs                                                                                                                                                          ┃
┃ctrl-t             │ NewTab             │ New tab                                                                                                             ┃
┃ctrl-w             │ CloseTab           │ Close tab (confirm when connected)                                                                                  ┃
┃alt-1, g 1         │ GoToTab1           │ Go to tab 1                                                                                                         ┃
┃alt-2, g 2         │ GoToTab2           │ Go to tab 2                                                                                                         ┃
┃alt-3, g 3         │ GoToTab3           │ Go to tab 3                                                                                                         ┃
┃alt-4, g 4         │ GoToTab4           │ Go to tab 4                                                                                                         ┃
┃alt-5, g 5         │ GoToTab5           │ Go to tab 5                                                                                                         ┃
┃alt-6, g 6         │ GoToTab6           │ Go to tab 6                                                                                                         ┃
┃alt-7, g 7         │ GoToTab7           │ Go to tab 7                                                                                                         ┃
┃j/k scroll  / filter  Esc close                                                                                                                               ┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
