crates/courier-ftp/src/snapshots/courier_ftp__snapshot_tests__snap_help_overlay_80x24.snap
---
source: crates/courier-ftp/src/snapshot_tests.rs
expression: "h.render(80, 24)"
---
┏▶Help: key bindings ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
┃Normal                                                                        ┃
┃ctrl-c  │ Cancel          │                                                   ┃
┃backtab │ FocusNextRegion │                                                   ┃
┃tab     │ FocusOtherSide  │                                                   ┃
┃?       │ Help            │                                                   ┃
┃f1      │ Help            │                                                   ┃
┃ctrl-q  │ Quit            │                                                   ┃
┃f10     │ Quit            │                                                   ┃
┃ctrl-z  │ Suspend         │                                                   ┃
┃ctrl-l  │ ToggleLog       │                                                   ┃
┃ctrl-e  │ ToggleTree      │                                                   ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃j/k scroll  / filter  Esc close                                               ┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
