crates/courier-ftp/src/snapshots/courier_ftp__snapshot_tests__snap_status_message_sanitised_80x24.snap
---
source: crates/courier-ftp/src/snapshot_tests.rs
expression: screen
---
 Quickconnect (not available yet)                                               
 1 Local                                                                        
┌ Message log · Tab 1 ─────────────────────────────────────────────────────────┐
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┏▶Local ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓┌ Remote ──────────────────────────────┐
┃(not available yet)                   ┃│(not available yet)                   │
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛└──────────────────────────────────────┘
┌ Queue ───────────────────────────────────────────────────────────────────────┐
│(not available yet)                                                           │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 NORMAL │ evil ^[[2J name<U+202E>txt.exe                      F1 help  F10 quit
