crates/courier-ftp/src/snapshots/courier_ftp__snapshot_tests__snap_too_small_30x8.snap
---
source: crates/courier-ftp/src/snapshot_tests.rs
expression: "h.render(30, 8)"
---
                              
                              
                              
Terminal too small: 30×8 (need
            40×10)
