crates/courier-ftp/src/snapshots/courier_ftp__snapshot_tests__snap_widescreen_160x48.snap
---
source: crates/courier-ftp/src/snapshot_tests.rs
expression: "h.render(160, 48)"
---
 Quickconnect (not available yet)                                                                                                                               
 1 Local                                                                                                                                                        
┏▶Local ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓┌ Remote ───────────────────────────────────────┐┌ Message log · Tab 1 ──────────────────────────────────────┐
┃                                                ┃│                                               ││                                                           │
┃                                                ┃│                                               ││                                                           │
┃                                                ┃│                                               ││                                                           │
┃                                                ┃│                                               ││                                                           │
┃                                                ┃│                                               ││                                                           │
┃                                                ┃│                                               ││                                                           │
┃                                                ┃│                                               ││                                                           │
┃                                                ┃│                                               ││                                                           │
┃                                                ┃│                                               ││                                                           │
┃                                                ┃│                                               ││                                                           │
┃                                                ┃│                                               ││                                                           │
┃                                                ┃│                                               ││                                                           │
┃                                                ┃│                                               ││                                                           │
┃                                                ┃│                                               ││                                                           │
┃                                                ┃│                                               ││                                                           │
┃                                                ┃│                                               ││                                                           │
┃                                                ┃│                                               ││                                                           │
┃                                                ┃│                                               ││                                                           │
┃                                                ┃│                                               ││                                                           │
┃                                                ┃│                                               ││                                                           │
┃                                                ┃│                                               ││                                                           │
┃                                                ┃│          Not connected to any server          │└───────────────────────────────────────────────────────────┘
┃                                                ┃│   Ctrl-s Site Manager · Ctrl-k Quickconnect   │┌ Queue ────────────────────────────────────────────────────┐
┃                                                ┃│                                               ││(not available yet)                                        │
┃                                                ┃│                                               ││                                                           │
┃                                                ┃│                                               ││                                                           │
┃                                                ┃│                                               ││                                                           │
┃                                                ┃│                                               ││                                                           │
┃                                                ┃│                                               ││                                                           │
┃                                                ┃│                                               ││                                                           │
┃                                                ┃│                                               ││                                                           │
┃                                                ┃│                                               ││                                                           │
┃                                                ┃│                                               ││                                                           │
┃                                                ┃│                                               ││                                                           │
┃                                                ┃│                                               ││                                                           │
┃                                                ┃│                                               ││                                                           │
┃                                                ┃│                                               ││                                                           │
┃                                                ┃│                                               ││                                                           │
┃                                                ┃│                                               ││                                                           │
┃                                                ┃│                                               ││                                                           │
┃                                                ┃│                                               ││                                                           │
┃                                                ┃│                                               ││                                                           │
┃                                                ┃│                                               ││                                                           │
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛└───────────────────────────────────────────────┘└───────────────────────────────────────────────────────────┘
 NORMAL                                                                                                                                       F1 help  F10 quit
